# fdf

./: CMakeLists.txt  Makefile  bresenham.c  color.c  drawing.c  drawing_utils.c  fdf.c  fdf.h  fdf_bonus.c  fdf_bonus.h  input_handler.c  parse_color.c  prepare.c  projection.c  temporal.c  utils_free.c  utils_map.c  xiaolin_wu.c
bonus/: color_bonus.c  drawing_bonus.c  drawing_utils_bonus.c  fdf_bonus.c  get_next_line_bonus.c  get_next_line_utils_bonus.c  input_handler_bonus.c  parse_bonus.c  parse_color_bonus.c  prepare_bonus.c  projection_bonus.c  utils_free_bonus.c  xiaolin_wu_bonus.c
bonus_includes/: fdf_bonus.h  get_next_line_bonus.h  libft_bonus.h
includes/: fdf.h
mlx/: mlx_image.swiftsourceinfo  mlx_init.swiftsourceinfo  mlx_window.swiftsourceinfo
parse/: parse.c  parse_color.c
srcs/: color.c  drawing.c  drawing_utils.c  input_handler.c  parse.c  parse_color.c  utils_free.c
test_maps/: test  xiaolin_wu.c
